# GenIR

./: CMakeLists.txt  LICENSE  README.md  Research Report
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tango-flux/: CMakeLists.txt  README.txt  ajout_descripteurs.py  api_interface (2).py
tango-flux/src/: IRGeneratorPanel.cpp  IRGeneratorPanel.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TangoFluxClient.h  _.txt
